--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^2.0.2",
     "@supabase/supabase-js": "^2.47.10",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
@@ -17,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.70.0",
+    "resend": "^6.7.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
