--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^5.2.2",
     "@react-email/components": "^1.0.4",
     "@react-email/render": "^2.0.2",
+    "@react-pdf/renderer": "^4.3.2",
     "@supabase/supabase-js": "^2.47.10",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
